V1:f7_feat,app_feat,single_mlp

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,7 @@
-dataset/detection_data
-dataset/hico
-dataset/processed
-dataset__pycache__
 test_img
-
-checkpoints/*
-log/*
+checkpoints
+log
+eval_result
 
 
 *.pyc
